--- a/spa_react/tsconfig.app.json
+++ b/spa_react/tsconfig.app.json
@@ -7,8 +7,11 @@
     "useDefineForClassFields": true,
     "lib": [
       "ES2020",
+      "es2015",
       "DOM",
-      "DOM.Iterable"
+      "DOM.Iterable",
+      "es5",
+      "es6"
     ],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -28,4 +31,3 @@
     "src"
   ]
 }
-
