--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -16,12 +16,14 @@
     "@primer/octicons-react": "^19.11.0",
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "mermaid": "^11.2.1",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "svg-pan-zoom": "^3.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
