update some sftp seetting

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -15,7 +15,7 @@
     "Host": "localhost",
     "User": "sftpuser",
     "Pass": "123",
-    "BasePath": "/home/ah/sftp_root/",
+    "BasePath": "/home/sftp/sftp_root/",
     "ImagePath": "image",
     "ResourceDocsPath": "resourceDocs"
   }
