--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -16,6 +16,7 @@
     "@primer/octicons-react": "^19.11.0",
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "date-fns": "^4.1.0",
     "mermaid": "^11.2.1",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
