--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -17,6 +17,7 @@
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
     "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "mermaid": "^11.2.1",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
@@ -24,7 +25,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.13",
-    "svg-pan-zoom": "^3.6.1"
+    "svg-pan-zoom": "^3.6.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
