--- a/api/erpPlanner.csproj
+++ b/api/erpPlanner.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="SSH.NET" Version="2024.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="TypeGen" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
