--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -16,6 +16,7 @@
     "@primer/octicons-react": "^19.11.0",
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "mermaid": "^11.2.1",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "sortablejs": "^1.15.3",
     "styled-components": "^6.1.13",
     "svg-pan-zoom": "^3.6.1",
     "yup": "^1.4.0"
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@stylistic/eslint-plugin-ts": "^2.8.0",
+    "@toast-ui/editor": "^3.2.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
