[11-05-2024] docker container worked for api
docker container work for api

rename and restructure docker file

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:5000"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Error",
@@ -6,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "postgresql": "Host=localhost;Port=5432;Username=ah;Password=;Database=planerp;IncludeErrorDetail=true",
+    "postgresql": "Host=db;Port=5432;Username=postgres;Password=123;Database=planerp;IncludeErrorDetail=true",
     "sqlite": "Data Source=planerp.db",
     "sqlserver": "Server=DESKTOP-HD67VPS\\SQLEXPRESS;Database=planerp;Trusted_Connection=True;TrustServerCertificate=true;"
   },
