--- a/planerp.yml
+++ b/planerp.yml
@@ -1,19 +1,32 @@
 name: "planerp"
 
 services:
+    spa: 
+        tty: true       
+        stdin_open: true
+        build:
+            context: ./spa_react/
+            dockerfile: ../dockerfile/spa.Dockerfile
+        working_dir: /planerp/spa
+        # entrypoint: ash
+        entrypoint: sh -c "yarn dev"
+        ports: 
+            - "7070:7070"
+        volumes:
+            - /home/ah/personalProject/planerp/spa_react/:/planerp/spa
+        depends_on: 
+            - api
     api:    
         tty: true       
         stdin_open: true
-        entrypoint: ash
-        # entrypoint: sh -c "dotnet watch run"
+        # entrypoint: ash
+        entrypoint: sh -c "dotnet watch run"
         working_dir: /planerp/api
         build: 
-            context:  ./dockerfile 
-            dockerfile: backend.Dockerfile
+            context:  ./api/
+            dockerfile: ../dockerfile/backend.Dockerfile
         volumes:
             - /home/ah/personalProject/planerp/api/:/planerp/api
-        # networks: 
-        #     - planerp-network
         ports: 
             - "5000:5000"
         depends_on: 
@@ -21,8 +34,8 @@ services:
     db: 
         # image: postgres:alpine3.20
         build: 
-          context: ./dockerfile
-          dockerfile: postgresql.Dockerfile
+            context: ./dockerfile/
+            dockerfile: ./postgresql.Dockerfile
         restart: always
 
         # set shared memory limit when using docker-compose
@@ -34,11 +47,8 @@ services:
         #    tmpfs:
         #      size: 134217728 # 128*2^20 bytes = 128Mb
         environment:
-          POSTGRES_PASSWORD: 123
+            - POSTGRES_USER=postgres
+            - POSTGRES_DB=planerp
+            - POSTGRES_PASSWORD=123
 
-        # networks: 
-        #     - planerp-network
-# networks:
-#     planerp-network: 
-#         name: planerp-custom-networks
-#         driver: bridge
+      
