--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@rjsf/core": "^5.22.4",
+    "@rjsf/utils": "^5.22.4",
+    "@rjsf/validator-ajv8": "^5.22.4",
     "@stylistic/eslint-plugin-ts": "^2.8.0",
     "@toast-ui/editor": "^3.2.2",
     "@types/react": "^18.3.3",
