--- a/api/erpPlanner.csproj
+++ b/api/erpPlanner.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="5.7.0" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Quartz" Version="3.11.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     <PackageReference Include="SqlKata" Version="2.4.0" />
     <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
     <PackageReference Include="SSH.NET" Version="2024.0.0" />
