--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -28,6 +28,7 @@
     "sortablejs": "^1.15.3",
     "styled-components": "^6.1.13",
     "svg-pan-zoom": "^3.6.1",
+    "swiper": "^11.1.14",
     "yup": "^1.4.0"
   },
   "devDependencies": {
