--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "gridstack": "^11.1.0",
     "mermaid": "^11.2.1",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
