--- a/api/erpPlanner.csproj
+++ b/api/erpPlanner.csproj
@@ -28,6 +28,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
+    <PackageReference Include="NSwag.MSBuild" Version="14.2.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="OpenIddict.AspNetCore" Version="5.7.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="5.7.0" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
@@ -38,9 +43,19 @@
     <PackageReference Include="SqlKata" Version="2.4.0" />
     <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
     <PackageReference Include="SSH.NET" Version="2024.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="TypeGen" Version="5.0.1" />
   </ItemGroup>
+
+  <!-- <Target -->
+  <!--   Name="NSwag" -->
+  <!--   AfterTargets="Build" -->
+  <!-- > -->
+  <!--https://github.com/RicoSuter/NSwag/wiki/NSwag.MSBuild -->
+  <!--   <Exec  -->
+  <!--     ConsoleToMSBuild="true" -->
+  <!--     Command="$(NSwagExe) run nswag.json /variables:Configuration=$(Configuration)"  -->
+  <!--   /> -->
+  <!-- </Target> -->
 
 </Project>
