--- a/spa_react/package.json
+++ b/spa_react/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "openapi-ts": "openapi-ts",
     "dev": "set PORT=7070 && tsc && vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -13,6 +14,7 @@
     "@blocksuite/blocks": "^0.17.6",
     "@blocksuite/presets": "^0.17.6",
     "@blocksuite/store": "^0.17.6",
+    "@hey-api/client-fetch": "^0.4.4",
     "@primer/octicons-react": "^19.11.0",
     "@primer/react": "^36.27.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -31,10 +33,12 @@
     "styled-components": "^6.1.13",
     "svg-pan-zoom": "^3.6.1",
     "swiper": "^11.1.14",
+    "ts-node": "^10.9.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@hey-api/openapi-ts": "^0.56.2",
     "@rjsf/core": "^5.22.4",
     "@rjsf/utils": "^5.22.4",
     "@rjsf/validator-ajv8": "^5.22.4",
