[12-10-1301] Update Learning Authentication and Authorization

--- a/learn-auth/appsettings.json
+++ b/learn-auth/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlite": "DataSource=learn.db;Cache=Shared"
+  },
   "AllowedHosts": "*"
 }
