[12-12-1027] sqlite connection setup done with dapper, ready to implement IUserStore<T>

--- a/learn-auth/appsettings.json
+++ b/learn-auth/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlite": "DataSource=learn.db;Cache=Shared"
+    "Sqlite": "DataSource=learn.db;Cache=Shared"
   },
   "AllowedHosts": "*"
 }
