[12-16-2036] add claim repository, before burn out

--- a/learn-auth/appsettings.json
+++ b/learn-auth/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Sqlite": "DataSource=learn.db;Cache=Shared"
+    "Sqlite": "DataSource=learn.db;Cache=Shared;foreign keys=true;"
   },
   "AllowedHosts": "*"
 }
