--- a/learn-auth/learn-auth.csproj
+++ b/learn-auth/learn-auth.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>learn_auth</RootNamespace>
+    <UserSecretsId>4fbaa0da-955d-4157-8e98-3c84b1bc15fe</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
