--- a/learn-auth/SPA/package.json
+++ b/learn-auth/SPA/package.json
@@ -18,13 +18,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "7.0.2",
+    "sakura.css": "^1.5.0",
     "sort-by": "^1.2.0",
-    "tiny-invariant": "^1.3.3",
-    "sakura.css": "^1.5.0"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.0.2",
     "@hey-api/openapi-ts": "^0.60.0",
+    "@react-router/dev": "^7.0.2",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
