--- a/learn-auth/SPA/package.json
+++ b/learn-auth/SPA/package.json
@@ -13,6 +13,7 @@
     "@hey-api/client-fetch": "^0.5.6",
     "@react-router/node": "^7.0.2",
     "@react-router/serve": "^7.0.2",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.17",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
