--- a/learn-router/asframework/package.json
+++ b/learn-router/asframework/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-router/node": "^7.1.1",
     "@react-router/serve": "^7.1.1",
+    "highlight.js": "^11.11.1",
     "isbot": "^5.1.17",
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
+    "sakura.css": "^1.5.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
