--- a/learn-router/asframework/package.json
+++ b/learn-router/asframework/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.1.1",
     "@react-router/serve": "^7.1.1",
     "highlight.js": "^11.11.1",
+    "idb": "^8.0.1",
     "isbot": "^5.1.17",
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
